--- a/form/nodeeditor.ui
+++ b/form/nodeeditor.ui
@@ -62,104 +62,104 @@
       <property name="text">
        <string>X1</string>
       </property>
-      <property name="flags">
-       <set>ItemIsSelectable|ItemIsDragEnabled|ItemIsEnabled</set>
+      <property name="checkState">
+       <enum>Checked</enum>
       </property>
      </item>
      <item row="1" column="0">
       <property name="text">
        <string>X2</string>
       </property>
-      <property name="flags">
-       <set>ItemIsSelectable|ItemIsDragEnabled|ItemIsEnabled</set>
+      <property name="checkState">
+       <enum>Checked</enum>
       </property>
      </item>
      <item row="2" column="0">
       <property name="text">
        <string>X3</string>
       </property>
-      <property name="flags">
-       <set>ItemIsSelectable|ItemIsDragEnabled|ItemIsEnabled</set>
+      <property name="checkState">
+       <enum>Checked</enum>
       </property>
      </item>
      <item row="3" column="0">
       <property name="text">
        <string>X4</string>
       </property>
-      <property name="flags">
-       <set>ItemIsSelectable|ItemIsDragEnabled|ItemIsEnabled</set>
+      <property name="checkState">
+       <enum>Checked</enum>
       </property>
      </item>
      <item row="4" column="0">
       <property name="text">
        <string>X5</string>
       </property>
-      <property name="flags">
-       <set>ItemIsSelectable|ItemIsDragEnabled|ItemIsEnabled</set>
+      <property name="checkState">
+       <enum>Checked</enum>
       </property>
      </item>
      <item row="5" column="0">
       <property name="text">
        <string>X6</string>
       </property>
-      <property name="flags">
-       <set>ItemIsSelectable|ItemIsDragEnabled|ItemIsEnabled</set>
+      <property name="checkState">
+       <enum>Checked</enum>
       </property>
      </item>
      <item row="6" column="0">
       <property name="text">
        <string>X7</string>
       </property>
-      <property name="flags">
-       <set>ItemIsSelectable|ItemIsDragEnabled|ItemIsEnabled</set>
+      <property name="checkState">
+       <enum>Checked</enum>
       </property>
      </item>
      <item row="7" column="0">
       <property name="text">
        <string>X8</string>
       </property>
-      <property name="flags">
-       <set>ItemIsSelectable|ItemIsDragEnabled|ItemIsEnabled</set>
+      <property name="checkState">
+       <enum>Checked</enum>
       </property>
      </item>
      <item row="8" column="0">
       <property name="text">
        <string>X9</string>
       </property>
-      <property name="flags">
-       <set>ItemIsSelectable|ItemIsDragEnabled|ItemIsEnabled</set>
+      <property name="checkState">
+       <enum>Checked</enum>
       </property>
      </item>
      <item row="9" column="0">
       <property name="text">
        <string>X10</string>
       </property>
-      <property name="flags">
-       <set>ItemIsSelectable|ItemIsDragEnabled|ItemIsEnabled</set>
+      <property name="checkState">
+       <enum>Checked</enum>
       </property>
      </item>
      <item row="10" column="0">
       <property name="text">
        <string>X11</string>
       </property>
-      <property name="flags">
-       <set>ItemIsSelectable|ItemIsDragEnabled|ItemIsEnabled</set>
+      <property name="checkState">
+       <enum>Checked</enum>
       </property>
      </item>
      <item row="11" column="0">
       <property name="text">
        <string>X12</string>
       </property>
-      <property name="flags">
-       <set>ItemIsSelectable|ItemIsDragEnabled|ItemIsEnabled</set>
+      <property name="checkState">
+       <enum>Checked</enum>
       </property>
      </item>
      <item row="12" column="0">
       <property name="text">
        <string>X13</string>
       </property>
-      <property name="flags">
-       <set>ItemIsSelectable|ItemIsDragEnabled|ItemIsEnabled</set>
+      <property name="checkState">
+       <enum>Checked</enum>
       </property>
      </item>
     </widget>
