update for 2nd request
due to customer require more features, I started implement these
features
1. create nodes
2. create edges
3. destroy nodes
4 destro edges

--- a/form/nodeeditor.ui
+++ b/form/nodeeditor.ui
@@ -40,7 +40,7 @@
      <row/>
      <column>
       <property name="text">
-       <string>編號</string>
+       <string>必經點</string>
       </property>
      </column>
      <column>
